--- a/content.tex
+++ b/content.tex
@@ -1,4 +1,8 @@
-\section{Others}
-    \subsection{java}
-            \lstinputlisting{Contents/java.java}
+\section{Contents}
+    \subsection{hw1}
+            \lstinputlisting{Contents/hw1.asm}
+\section{Contents}
+    \subsection{hw2}
+            \lstinputlisting{Contents/hw2.asm}
+    
     
