--- a/content.tex
+++ b/content.tex
@@ -1,8 +1,13 @@
-\section{Contents}
-    \subsection{hw1}
-            \lstinputlisting{Contents/hw1.asm}
-\section{Contents}
-    \subsection{hw2}
-            \lstinputlisting{Contents/hw2.asm}
+\section{exams}
+    \subsection{star pyramid}
+            \lstinputlisting{Contents/exams/exam_0x1_P1_star_pyramid.asm}
+
+\section{homeworks}
+    \subsection{print prime asm}
+            \lstinputlisting{Contents/homeworks/hw_0x1_print_prime.asm}    
+    \subsection{print prime cpp}
+            \lstinputlisting{Contents/homeworks/hw_0x1_print_prime.cpp}      
+    \subsection{max and min}
+            \lstinputlisting{Contents/homeworks/hw_0x2_max_and_min.asm}
     
     
