--- a/content.tex
+++ b/content.tex
@@ -1,13 +1,21 @@
-\section{exams}
-    \subsection{star pyramid}
-            \lstinputlisting{Contents/exams/exam_0x1_P1_star_pyramid.asm}
+\section{hw 0x4}
+    \subsection{gcd inc}
+            \lstinputlisting{Contents/homeworks/hw_0x4_gcd_lcm_gcd.inc}    
+    \subsection{main asm}
+            \lstinputlisting{Contents/homeworks/hw_0x4_gcd_lcm_main.asm}  
+    \subsection{gcd asm}
+            \lstinputlisting{Contents/homeworks/hw_0x4_gcd_lcm_gcd.asm}   
 
-\section{homeworks}
-    \subsection{print prime asm}
-            \lstinputlisting{Contents/homeworks/hw_0x1_print_prime.asm}    
-    \subsection{print prime cpp}
-            \lstinputlisting{Contents/homeworks/hw_0x1_print_prime.cpp}      
-    \subsection{max and min}
-            \lstinputlisting{Contents/homeworks/hw_0x2_max_and_min.asm}
+\section{hw 0x5}
+    \subsection{header inc}
+            \lstinputlisting{Contents/homeworks/hw_0x5_header.inc}    
+    \subsection{main asm}
+            \lstinputlisting{Contents/homeworks/hw_0x5_main.asm}  
+    \subsection{input asm}
+            \lstinputlisting{Contents/homeworks/hw_0x5_input.asm}      
+    \subsection{sort asm}
+            \lstinputlisting{Contents/homeworks/hw_0x5_sort.asm}
+    \subsection{output asm}
+            \lstinputlisting{Contents/homeworks/hw_0x5_output.asm}
     
     
