--- a/content.tex
+++ b/content.tex
@@ -1,12 +1,7 @@
-\section{hw 0x4}
-    \subsection{gcd inc}
-            \lstinputlisting{Contents/homeworks/hw_0x4_gcd_lcm_gcd.inc}    
-    \subsection{main asm}
-            \lstinputlisting{Contents/homeworks/hw_0x4_gcd_lcm_main.asm}  
-    \subsection{gcd asm}
-            \lstinputlisting{Contents/homeworks/hw_0x4_gcd_lcm_gcd.asm}   
-
-\section{hw 0x5}
+\section{hw 0x5 c++}
+        \subsection{selection sort} 
+            \lstinputlisting{Contents/homeworks/hw_0x5_selection_sort.cpp}
+\section{hw 0x5 assembly language}
     \subsection{header inc}
             \lstinputlisting{Contents/homeworks/hw_0x5_header.inc}    
     \subsection{main asm}
