--- a/codebook.tex
+++ b/codebook.tex
@@ -86,7 +86,7 @@
 \pagestyle{fancy}
 \fancyfoot{}
 %\fancyfoot[R]{\includegraphics[width=20pt]{ironwood.jpg}}
-\fancyhead[C]{409262449 吳家萱\textbackslash N}
+\fancyhead[C]{409262449 吳家萱}
 \fancyhead[L]{FJCU}
 \fancyhead[R]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
